# auth

./: README.md  pom.xml  pyproject.toml
app/: main.py
postman/: Auth-Server.postman_collection.json
src/main/java/com/bontech/auth/: AuthServerApplication.java
src/main/java/com/bontech/auth/config/: AuditingConfig.java  DataInitializer.java  SecurityConfig.java
src/main/java/com/bontech/auth/controller/: AdminController.java  AuthController.java  GroupController.java  ReportController.java  SessionController.java  TenantAdminController.java  UserController.java  ViewController.java
src/main/java/com/bontech/auth/dto/: AdminDto.java  AuthDto.java  GroupDto.java  LogDto.java  SessionDto.java  TenantAdminDto.java  UserDto.java
src/main/java/com/bontech/auth/entity/: ActivityLog.java  AuditableEntity.java  GroupPermission.java  PasswordHistory.java  Permission.java  Role.java  Tenant.java  TwoStepChallenge.java  UserAccount.java  UserGroup.java  UserPhoneNumber.java  UserSession.java
src/main/java/com/bontech/auth/repository/: ActivityLogRepository.java  GroupPermissionRepository.java  PasswordHistoryRepository.java  (+8 more)
src/main/resources/: application.yml  logback-spring.xml
src/main/resources/db/changelog/: 001-create-tables.yaml  002-seed-data.yaml  004-seed-users-roles-permissions.yaml  db.changelog-master.yaml
src/main/resources/db/data/: permissions.csv  role_permissions.csv  roles.csv  tenants.csv
src/main/webapp/WEB-INF/jsp/: login.jsp  register.jsp
src/test/java/com/bontech/auth/: AuthServerApplicationTests.java
tests/: test_auth.py
(+23 files in other folders)
